# SBOM-Grader

./: CHANGELOG.md  Dockerfile  README.md  definitions.py  main.py  pyproject.toml  sample_sbom.json  sample_schema.yml  tox.ini
.github/workflows/: release-please.yml  validation.yml
cookbooks/: README.md  generic.yml  generic_build.yml  generic_release.yml  image_build.yml  image_index_build.yml  image_index_release.yml  image_release.yml  product.yml  rpm_build.yml  rpm_release.yml
cookbooks/schema/: cookbook_schema.yml
core/: cookbook_bundles.py  cookbooks.py  definitions.py  documents.py  enums.py  field_resolve.py  rules.py  utils.py
rules/: cookbooks.py  rule.py  rule_loader.py
rulesets/: general.yml  specific.yml
rulesets/schema/: rule_schema.yml
sbomgrader/: __main__.py
sbomgrader/cookbooks/: image_index_build.yml  image_index_release.yml
sbomgrader/core/: cached_python_loader.py  cookbooks.py  definitions.py  documents.py  enums.py  field_resolve.py  formats.py  utils.py
sbomgrader/formats/: README.md  formats.yml
sbomgrader/grade/: cookbook_bundles.py  cookbooks.py  rules.py
sbomgrader/rulesets/: general.yml  specific.yml
sbomgrader/translate/: choose_map.py  prune.py  translation_map.py
sbomgrader/translation_maps/: README.md  red_hat_spdx23_cdx16.yml  sample_spdx23_cdx16.yml
tests/: conftest.py  test_on_data.py  test_translation.py
tests/performance/: conftest.py  generate_test_data.py  test_performance_translate.py
tests/testdata/: image_build_sbom.json  image_index_build_sbom.json  image_release_sbom.json
(+16 files in other folders)
